--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
     <link rel="icon" href="images/MothaflokiLogo.ico" type="image/x-icon">
   </head>
   <body>
-    <main>
- 
-    </main>
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog modal-md">
+            <center><video id="myVideo" src="/images/IMG_4773.MP4" autoplay style="border-radius:5px;width:100%;"></video></center>
+        </div>
+    </div>
 	<script src="index.js"></script>
   </body>
 </html>
+<script>
+    $("#myModal").modal()
+    $(".container").hide();
+    document.getElementById('myVideo').addEventListener('ended', closeModal, false);
+
+    function closeModal() {
+        $(".container").show();
+        $('#myModal').modal('hide');
+    }
+    </script>
