--- a/index.html
+++ b/index.html
@@ -16,5 +16,19 @@
             <li><a class="navlink" href="#roadmap">ROADMAP</a></li>
         </ul>
     </nav>
+    <section class="section1">
+        <img class="logo" src="/images/logo.jpeg" alt="">
+        <div class="buttons">
+           <a href=""><img src="/images/buy.png" alt=""></a>
+           <a href=""><img src="/images/stake.png" alt=""></a>
+           <a href=""><img src="/images/nfts.png" alt=""></a>
+           <a href=""><img src="/images/farm.png" alt=""></a>
+       </div>
+        <div class="socialbuttons">
+           <a href=""><img src="/images/socialbutton.png" alt=""></a>
+           <a href=""><img src="/images/telegram.png" alt=""></a>
+           <a href=""><img src="/images/mail.png" alt=""></a>
+        </div>
+               </section>
   </body>
 </html>
