--- a/index.html
+++ b/index.html
@@ -9,52 +9,18 @@
     <link rel="icon" href="images/MothaflokiLogo.ico" type="image/x-icon">
   </head>
   <body>
-    <nav id="home">
-        <ul>
-            <li><a class="firstnavlink" href="#home">HOME</a></li>
-            <li><a class="navlink" href="#about">ABOUT</a></li>
-            <li><a class="navlink" href="#roadmap">ROADMAP</a></li>
-        </ul>
-    </nav>
-<div class="header-connect">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 col-sm-8  col-xs-12">
-                    <div class="header-half header-call">
-                        <p>
-                            <span><i class="pe-7s-call"></i> +1 234 567 7890</span>
-                            <span><i class="pe-7s-mail"></i> your@company.com</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-12">
-                    <div class="header-half header-social">
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-vine"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+          </div>
         </div>
-    </div>   
-    <section class="section1">
-        <img class="logo" src="/images/logo.jpeg" alt="">
-        <div class="buttons">
-           <a href=""><img src="/images/buy.png" alt=""></a>
-           <a href=""><img src="/images/stake.png" alt=""></a>
-           <a href=""><img src="/images/nfts.png" alt=""></a>
-           <a href=""><img src="/images/farm.png" alt=""></a>
-       </div>
-        <div class="socialbuttons">
-           <a href=""><img src="/images/socialbutton.png" alt=""></a>
-           <a href=""><img src="/images/telegram.png" alt=""></a>
-           <a href=""><img src="/images/mail.png" alt=""></a>
-        </div>
-               </section>
+      </nav>
   </body>
 </html>
