--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     
   <body>
     <div class="topnav">
+        <img src="/images/MothaflokiLogo.jfif" alt="">
         <a href="#home">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
