--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <body>
     
     <div class="topnav">
+        <img src="/images/MothaflokiLogo.jfif" alt="" width="%30">
       <a href="#">Link</a>
       <a href="#">Link</a>
       <a href="#">Link</a>
@@ -75,12 +76,5 @@
     </html>
     
   <body>
-    <div class="topnav">
-        <img src="/images/MothaflokiLogo.jfif" alt="">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-    </div>
   </body>
 </html>
