--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <body>
     
     <div class="topnav">
-        <img src="/images/MothaflokiLogo.jfif" alt="" width="%30">
+      <img id="logonav" src="/images/MothaflokiLogo.jfif" alt="">
       <a href="#">Link</a>
       <a href="#">Link</a>
       <a href="#">Link</a>
