--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     
     <div class="topnav">
       <img id="logonav" src="/images/MothaflokiLogo.jfif" alt="">
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Roadmap</a>
     </div>
     
     <div class="content">
