--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     /* Style the topnav links */
     .topnav a {
-      float: left;
+      float: right;
       display: block;
       color: #f2f2f2;
       text-align: center;
