--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <body>
     
     <div class="topnav">
-      <img id="logonav" src="/images/MothaflokiLogo.jfif" alt="">
+      <img id="logonav" src="/images/MothaflokiLogo.png" alt="">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Roadmap</a>
