--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
     </div>
     
     <div class="content">
-      <h2>CSS Template</h2>
-      <p>A topnav, content and a footer.</p>
+      <h2>Mothafloki</h2>
+      <div class="buttons">
+        <a href=""><img src="/images/telegram.png" alt=""></a>
+        <a href=""><img src="/images/telegram.png" alt=""></a>
+        <a href=""><img src="/images/telegram.png" alt=""></a>
+      </div>
     </div>
+
     
     <div class="footer">
       <p>Footer</p>
