--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <body>
     
     <div class="topnav">
-      <img id="logonav" src="/images/MothaflokiLogo.png" alt="" style="width: 10&;">
+      <img id="logonav" src="/images/MothaflokiLogo.png" alt="" style="width: 10%;">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Roadmap</a>
