--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <div class="content">
       <h2>Mothafloki</h2>
       <div class="buttons">
-        <a href=""><img src="/images/telegram.png" alt=""></a>
-        <a href=""><img src="/images/telegram.png" alt=""></a>
-        <a href=""><img src="/images/telegram.png" alt=""></a>
+        <a href=""><img src="/images/telegram.png" alt="" style="width: 10%;"></a>
+        <a href=""><img src="/images/telegram.png" alt="" style="width: 10%;"></a>
+        <a href=""><img src="/images/telegram.png" alt="" style="width: 10%;"></a>
       </div>
     </div>
 
